--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/main.js",
     "dev": "nodemon src/main.js",
+    "postinstall": "puppeteer install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
