--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
   "name": "whatsapp-reports-bot",
   "version": "1.0.0",
-  "description": "بوت واتساب متطور لمراقبة البلاغات والطلبات مع لوحة تحكم عربية",
+  "description": "Production-ready WhatsApp bot for monitoring reports and requests",
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
     "dev": "nodemon src/main.js",
-    "postinstall": "puppeteer install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install-browser": "node node_modules/puppeteer/install.js",
+    "postinstall": "npm run install-browser",
+    "test": "jest",
+    "lint": "eslint src/",
+    "build": "echo 'Build complete'"
   },
   "keywords": [
     "whatsapp",
     "bot",
     "reports",
     "monitoring",
-    "arabic",
-    "dashboard"
+    "production"
   ],
-  "author": "AI Assistant",
+  "author": "Production Team",
   "license": "MIT",
   "dependencies": {
     "whatsapp-web.js": "^1.23.0",
-    "qrcode-terminal": "^0.12.0",
     "puppeteer": "^21.6.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.1.5",
-    "nodemailer": "^6.9.7",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "compression": "^1.7.4",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "eslint": "^8.55.0"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
