Complete WhatsApp Bot System Rebuild

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
 # Server Configuration
 PORT=3000
+HOST=0.0.0.0
 NODE_ENV=development
 LOG_LEVEL=info
 
-# Database
+# Database Configuration
 DB_PATH=./data/reports.db
-
-# Security
-ALLOWED_ORIGINS=http://localhost:3000
 
 # WhatsApp Configuration
 WHATSAPP_SESSION_PATH=./data/auth
 
+# Security Configuration
+ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com
+ADMIN_USERS=1234567890@s.whatsapp.net,0987654321@s.whatsapp.net
+
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Reports Configuration
+REPORTS_RETENTION_DAYS=90
