--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "whatsapp-reports-bot",
-  "version": "1.0.0",
-  "description": "Production-ready WhatsApp bot for monitoring reports and requests",
-  "main": "src/main.js",
+  "version": "2.0.0",
+  "description": "Production-ready WhatsApp bot using Baileys for monitoring reports and requests",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/main.js",
-    "dev": "nodemon src/main.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "jest",
     "lint": "eslint src/",
     "build": "echo 'Build complete'"
@@ -13,6 +14,7 @@
   "keywords": [
     "whatsapp",
     "bot",
+    "baileys",
     "reports",
     "monitoring",
     "production"
@@ -20,7 +22,7 @@
   "author": "Production Team",
   "license": "MIT",
   "dependencies": {
-    "whatsapp-web.js": "^1.23.0",
+    "@whiskeysockets/baileys": "^6.6.0",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "cors": "^2.8.5",
@@ -28,7 +30,10 @@
     "express-rate-limit": "^7.1.5",
     "winston": "^3.11.0",
     "compression": "^1.7.4",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "qrcode-terminal": "^0.12.0",
+    "node-cron": "^3.0.3",
+    "pino": "^8.16.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
